--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,5 +9,12 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require_tree .
+ *= require bootstrap_and_overrides
  */
+.clear{ display: block; clear: both; }
+.left {float: left;}
+.right {float: right;}
+span.token { padding: 0 4px; color: #000; background: #EFF2F7;
+border-radius: 3px; border: 1px solid #CCD5E4; margin-right: 5px;
+margin-bottom: 2px; float: left; cursor: default;}
+span.token a {text-decoration: none;margin-left: 10px;}
