--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,3 +18,4 @@ span.token { padding: 0 4px; color: #000; background: #EFF2F7;
 border-radius: 3px; border: 1px solid #CCD5E4; margin-right: 5px;
 margin-bottom: 2px; float: left; cursor: default;}
 span.token a {text-decoration: none;margin-left: 10px;}
+.dn {display: none;}
