--- a/app/views/news_feeds/index.html.haml
+++ b/app/views/news_feeds/index.html.haml
@@ -2,9 +2,31 @@
   = stylesheet_link_tag "news_feeds"
 .page-header
   %h1{style: "font-style: italic;"} News Feeds
-#dashboard
-  .filter
+#dashboard.
+  - @news_feeds.each do |news_feed|
+    .newsFeed
+      .feed-img= image_tag news_feed.image_urls
+      .feed-title=
+      .feed-description=
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+- if false
+  .filter
   - @news_feeds.each do |news_feed|
     .newsFeed
       .websiteImage.left= image_tag "rails.png", width: "45px", height: "45px"
@@ -15,27 +37,28 @@
       .clear
 
 
-%table.table.table-striped
-  %thead
-    %tr
-      %th Id
-      %th Title
-      %th Description
-      %th Published date
-      %th Keyword
-      %th Image urls
-      %th Actions
-  %tbody
-    - @news_feeds.each do |news_feed|
+- if false
+  %table.table.table-striped
+    %thead
       %tr
-        %td= link_to news_feed.id, news_feed_path(news_feed)
-        %td= link_to news_feed.title, news_feed.link
-        %td= news_feed.description
-        %td= timeago(news_feed.published_date)
-        %td= news_feed.keywords
-        %td= news_feed.image_urls
-        %td
-          = link_to "Edit", edit_news_feed_path(news_feed), class: 'btn btn-mini'
-          = link_to "Delete", news_feed_path(news_feed),
-                      method: :delete, confirm: 'Are you sure?', class: 'btn btn-mini btn-danger'
-= paginate @news_feeds
+        %th Id
+        %th Title
+        %th Description
+        %th Published date
+        %th Keyword
+        %th Image urls
+        %th Actions
+    %tbody
+      - @news_feeds.each do |news_feed|
+        %tr
+          %td= link_to news_feed.id, news_feed_path(news_feed)
+          %td= link_to news_feed.title, news_feed.link
+          %td= news_feed.description
+          %td= timeago(news_feed.published_date)
+          %td= news_feed.keywords
+          %td= news_feed.image_urls
+          %td
+            = link_to "Edit", edit_news_feed_path(news_feed), class: 'btn btn-mini'
+            = link_to "Delete", news_feed_path(news_feed),
+                        method: :delete, confirm: 'Are you sure?', class: 'btn btn-mini btn-danger'
+  = paginate @news_feeds
