--- a/app/views/news_feeds/_index.html.erb
+++ b/app/views/news_feeds/_index.html.erb
@@ -4,10 +4,12 @@
       <%= image_tag nf.image_urls.first unless nf.image_urls.empty? %>
     </div>
     <div class='newsTitle'>
-      <%= link_to nf.title, nf.link, target: :blank %>
+      <%= link_to nf.title, nf.link, target: :blank %> -
+      <%= link_to nf.rss_link.title, nf.rss_link.url, target: :blank %>
     </div>
     <div class='newsDescription'>
       <%= nf.description %>
     </div>
+    <div class="timeAgo"><%= timeago(nf.published_date) %></div>
   </div>
 <% end %>
