--- a/app/views/news_feeds/index.js.erb
+++ b/app/views/news_feeds/index.js.erb
@@ -1,14 +1,9 @@
 $("#moreNews").remove();
-var boxes = "<%= j(render 'index', news_feeds: @news_feeds) %>";
-$(".dashboard").masonry( 'destroy' );
+var boxes = "<%= j(render '/news_feeds/index', news_feeds: @news_feeds) %>";
 $(".dashboard").append(boxes);
-$('.dashboard').imagesLoaded(function(){
-  $('.dashboard').masonry({
-    itemSelector : '.newsFeed',
-  });
-});
-$("<%= j(render 'more_link', news_feeds: @news_feeds) %>").insertAfter(".dashboard");
+$(".dashboard").append("<%= j(render '/news_feeds/more_link', news_feeds: @news_feeds) %>");
 if($("#moreNews a").length == 0)
   $("#moreNews").remove();
-$('html,body').animate({scrollTop: $("#nf<%= @news_feeds.first.id %>").offset().top-100},'slow');
-setTimeout(function(){ $(".new").removeClass("new"); }, 2000);
+$("abbr.timeago").timeago();
+$('html,body').animate({scrollTop: $("#nf<%= @news_feeds.first.id %>").offset().top-150},'slow');
+setTimeout(function(){ $(".new").removeClass("new"); }, 3000);
