--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <a class="brand" href="#">News Application</a>
+        <a class="brand" href="/">News Application</a>
         <div class="nav-collapse">
           <ul class="nav">
             <%= is_active_controller?('news_feeds') %>
