CRON logging added.

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,5 +1,6 @@
 <a href="/admin/update_rss" class="btn btn-success" data-remote="true">Update News</a>
 <a href="/admin/delete_old_news" class="btn btn-warning" data-remote="true">Delete old News updates</a>
+<a href="/admin/cron" class="btn btn-primary" >Cron Logs</a>
 <img alt="updating" class="dn loading" src="/assets/big-loader.gif">
 
 <%#= link_to "Update News", "", class: "btn btn-success", remote: true %>
