--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -11,6 +11,10 @@
 <%= content_for :js do %>
   <script type="text/javascript">
     $("a.btn").click(function(){
+      if($(this).html() == 'Cron Logs'){
+        window.location = '/admin/cron';
+        return false;
+      }
       toggleDoms(".loading", "a.btn");
       $("div.container:eq(1) .alert:first").remove();
     });
