Corrected Image parsing

--- a/app/views/news_feeds/_index.html.erb
+++ b/app/views/news_feeds/_index.html.erb
@@ -1,8 +1,8 @@
 <% news_feeds.all.each do |nf| %>
   <div class='newsFeed new' id="nf<%= nf.id %>">
-    <div class='newsImage'>
+    <span class='newsImage'>
       <%= image_tag nf.image_urls.first unless nf.image_urls.empty? %>
-    </div>
+    </span>
     <div class='newsTitle'>
       <%= link_to nf.title, nf.link, target: :blank %> -
       <%= link_to nf.rss_link.title, nf.rss_link.url, target: :blank %>
