--- a/app/views/admin/cron.html.erb
+++ b/app/views/admin/cron.html.erb
@@ -1,19 +1,5 @@
 <div class="page-header">
   <h1 style="font-style: italic;">Cron Information</h1>
 </div>
-<table class='table table-bordered table-striped' id='listsTable'>
-  <tr>
-    <th>Started_at</th>
-    <th>Status</th>
-    <th>Finished_at / Failed at</th>
-  </tr>
-  <% @crons.each do |cron| %>
-    <tr>
-      <td><%= cron.created_at.in_time_zone("Mumbai") %></td>
-      <td><span class="label <%= cron_class(cron.status) %>"><%= cron.status %></span></td>
-      <td><%= cron.finished_at.try(:in_time_zone, "Mumbai") %></td>
-    </tr>
-  <% end %>
-</table>
-<%= paginate @crons %>
+<%= render "cron", crons: @crons%>
 <%= link_to 'Update News', "/admin", class: "btn btn-primary" %>
