--- a/app/views/news_feeds/index.js.erb
+++ b/app/views/news_feeds/index.js.erb
@@ -1,9 +1,16 @@
 $("#moreNews").remove();
-var boxes = "<%= j(render '/news_feeds/index', news_feeds: @news_feeds) %>";
-$(".dashboard").append(boxes);
-$(".dashboard").append("<%= j(render '/news_feeds/more_link', news_feeds: @news_feeds) %>");
-if($("#moreNews a").length == 0)
-  $("#moreNews").remove();
-$("abbr.timeago").timeago();
-$('html,body').animate({scrollTop: $("#nf<%= @news_feeds.first.id %>").offset().top-100},'slow');
-setTimeout(function(){ $(".new").removeClass("new"); }, 3000);
+try {
+  var news_feeds = jQuery.parseJSON("<%= j(@news_feeds.to_json.html_safe) %>");
+  var news_feeds_html = generateNewsFeedHtml(news_feeds);
+  $("div.dashboard").append(news_feeds_html);
+  $("abbr.timeago").timeago();
+  $('html,body').animate({scrollTop: $("#nf<%= @news_feeds.first.id %>").offset().top-100},'slow');
+  $(".dashboard").append("<%= j(render '/news_feeds/more_link', news_feeds: @news_feeds) %>");
+  if($("#moreNews a").length == 0)
+    $("#moreNews").remove();
+  $("#moreNews")
+  setTimeout(function(){ $(".new").removeClass("new"); }, 3000);
+}
+catch(e){
+  console.log(e.message);
+}
